removed '/' from href

--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
             <h2 class="heading-1">My Travel Diary</h2>
             <table>
                 <tr>
-                    <td><div class="img-bg"><a href="/alaska.html"><img src="https://images.pexels.com/photos/41004/alaska-wilderness-sky-aurora-borealis-41004.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"  alt=""><p class="place-name">Alaska, USA</p></a></div></td>
-                    <td><div class="img-bg"><a href="/arizona.html"><img src="https://images.pexels.com/photos/1672813/pexels-photo-1672813.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="350" height="220" alt=""> <p class="place-name">Canyon, Arizona, USA</p></a></div></td>
-                    <td><div class="img-bg"><a href="/queenstown.html"><img src="https://images.pexels.com/photos/724973/pexels-photo-724973.png?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"width="350" height="220" alt=""> <p class="place-name">Queenstown, New Zealand</p></a></div></td>
+                    <td><div class="img-bg"><a href="alaska.html"><img src="https://images.pexels.com/photos/41004/alaska-wilderness-sky-aurora-borealis-41004.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"  alt=""><p class="place-name">Alaska, USA</p></a></div></td>
+                    <td><div class="img-bg"><a href="arizona.html"><img src="https://images.pexels.com/photos/1672813/pexels-photo-1672813.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="350" height="220" alt=""> <p class="place-name">Canyon, Arizona, USA</p></a></div></td>
+                    <td><div class="img-bg"><a href="queenstown.html"><img src="https://images.pexels.com/photos/724973/pexels-photo-724973.png?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"width="350" height="220" alt=""> <p class="place-name">Queenstown, New Zealand</p></a></div></td>
                 </tr>
                 <tr>
-                    <td><div class="img-bg"><a href="/paris.html"><img src="https://images.pexels.com/photos/739407/pexels-photo-739407.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="350" height="220" alt=""><p class="place-name">Paris, France</p></a></div></td>
-                    <td><div class="img-bg"><a href="/amsterdam.html"><img src="https://images.pexels.com/photos/967292/pexels-photo-967292.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="350" height="220" alt=""> <p class="place-name">Amsterdam, Netherlands</p></a></div></td>
-                    <td><div class="img-bg"><a href="/washington.html"><img src="https://images.pexels.com/photos/490466/pexels-photo-490466.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="350" height="220" alt=""> <p class="place-name">Washington, USA</p></a></div></td>
+                    <td><div class="img-bg"><a href="paris.html"><img src="https://images.pexels.com/photos/739407/pexels-photo-739407.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="350" height="220" alt=""><p class="place-name">Paris, France</p></a></div></td>
+                    <td><div class="img-bg"><a href="amsterdam.html"><img src="https://images.pexels.com/photos/967292/pexels-photo-967292.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="350" height="220" alt=""> <p class="place-name">Amsterdam, Netherlands</p></a></div></td>
+                    <td><div class="img-bg"><a href="washington.html"><img src="https://images.pexels.com/photos/490466/pexels-photo-490466.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="350" height="220" alt=""> <p class="place-name">Washington, USA</p></a></div></td>
                 </tr>
                 <tr>
-                    <td><div class="img-bg"><a href="/peru.html"><img src="https://images.pexels.com/photos/90597/pexels-photo-90597.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="350" height="220" alt=""><p class="place-name">Peru, South America</p></a></div></td>
-                    <td><div class="img-bg"><a href="/iceland.html"><img src="https://images.pexels.com/photos/2602543/pexels-photo-2602543.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" width="350" height="220" alt=""> <p class="place-name">Iceland</p></a></div></td>
-                    <td><div class="img-bg"><a href="/havana.html"><img src="https://images.pexels.com/photos/2079/nature-forest-waterfall-jungle.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="350" height="220" alt=""> <p class="place-name">Amazon Forest, Brazil</p></a></div></td>
+                    <td><div class="img-bg"><a href="peru.html"><img src="https://images.pexels.com/photos/90597/pexels-photo-90597.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="350" height="220" alt=""><p class="place-name">Peru, South America</p></a></div></td>
+                    <td><div class="img-bg"><a href="iceland.html"><img src="https://images.pexels.com/photos/2602543/pexels-photo-2602543.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" width="350" height="220" alt=""> <p class="place-name">Iceland</p></a></div></td>
+                    <td><div class="img-bg"><a href="havana.html"><img src="https://images.pexels.com/photos/2079/nature-forest-waterfall-jungle.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="350" height="220" alt=""> <p class="place-name">Amazon Forest, Brazil</p></a></div></td>
                 </tr>
             </table>
         </div>
