--- a/alaska.html
+++ b/alaska.html
@@ -43,7 +43,7 @@
 
     <div class="navBtns">
         <!-- <span class="prevBtn" > <a href=""> <button>Previous</button></a></span> -->
-        <span class="nextBtn1" style="margin-left: 90%; margin-right: 15px"><a href="/arizona.html"> <button>Next</button></a></span>
+        <span class="nextBtn1" style="margin-left: 90%; margin-right: 15px"><a href="arizona.html"> <button>Next</button></a></span>
     </div>
 
     <footer class="navbar">
