Update and rename havana.html to amazon.html

--- a/amazon.html
+++ b/amazon.html
@@ -42,7 +42,7 @@
 
     <div class="navBtns">
         <span class="prevBtn"> <a href="iceland.html"> <button>Previous</button></a></span>
-        <span class="nextBtn"><a href="/"> <button hidden>Next</button></a></span>
+        <span class="nextBtn"><a href=""> <button hidden>Next</button></a></span>
     </div>
 
     <footer class="navbar">
