--- a/iceland.html
+++ b/iceland.html
@@ -35,7 +35,7 @@
     </div>
     <div class="navBtns">
         <span class="prevBtn"> <a href="peru.html"> <button>Previous</button></a></span>
-        <span class="nextBtn"><a href=""> <button>Next</button></a></span>
+        <span class="nextBtn"><a href="amazon.html"> <button>Next</button></a></span>
     </div>
 
     <footer class="navbar">
