--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <tr>
                     <td><div class="img-bg"><a href="peru.html"><img src="https://images.pexels.com/photos/90597/pexels-photo-90597.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="350" height="220" alt=""><p class="place-name">Peru, South America</p></a></div></td>
                     <td><div class="img-bg"><a href="iceland.html"><img src="https://images.pexels.com/photos/2602543/pexels-photo-2602543.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" width="350" height="220" alt=""> <p class="place-name">Iceland</p></a></div></td>
-                    <td><div class="img-bg"><a href="havana.html"><img src="https://images.pexels.com/photos/2079/nature-forest-waterfall-jungle.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="350" height="220" alt=""> <p class="place-name">Amazon Forest, Brazil</p></a></div></td>
+                    <td><div class="img-bg"><a href="amazon.html"><img src="https://images.pexels.com/photos/2079/nature-forest-waterfall-jungle.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="350" height="220" alt=""> <p class="place-name">Amazon Forest, Brazil</p></a></div></td>
                 </tr>
             </table>
         </div>
