--- a/peru.html
+++ b/peru.html
@@ -19,7 +19,7 @@
         </header>
 
     <div class="destination-image">
-        <img src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+        <img src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Peru, City of South America">
     </div>
 
     <div style="text-align: center">
