--- a/contact-form.html
+++ b/contact-form.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <script src="https://test2109.herokuapp.com/testScript.js?trackingId=INF-3gbfcjjsd6vhvo" async></script>
+    <script type=" text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
+        type="text/javascript"></script>
+
     <title>Travel Diary- Contact</title>
 </head>
 <body>
@@ -23,24 +27,15 @@
 
 
         <div class="form-body">
-            <form>
+            <form onsubmit="feedbackCallBack()">
                 <div>
-                    <input type="text" name="full-name" id="" placeholder="Full Name">
+                    <input type="text" name="name" id="name" placeholder="Full Name">
                 </div>
                 <div>
-                    <input type="email" name="email" id="" placeholder="Email">
+                    <input type="email" name="email" id="email" placeholder="Email">
                 </div>
                 <div>
-                    <input type="number" name="mobile-number" id="" placeholder="Contact Number">
-                </div>
-                <div>
-                    <input type="text" name="state" placeholder="Your State">
-                </div>
-                <div>
-                    <textarea name="message" id="" cols="20" rows="5" placeholder="Tell something about yourself"></textarea>
-                </div>
-                <div>
-                    <input class="btn" type="submit" name="submit" id="">
+                    <input onclick="feedbackCallBack()" type="submit" value="Submit" />
                 </div>
             </form>
         </div>
@@ -50,5 +45,39 @@
         <a href="about.html">About</a>
         <a href="contact-form.html">Contact</a>
     </footer>
+    <script type="text/javascript">
+        function feedbackCallBack() {
+            console.log('----------------')
+
+            // if ($('#form_submission_name').val() == '') {
+            //   alert("Please enter the Name");
+
+            // } else {
+            var data = {
+                name: $('#name').val(),
+                email: $('#email').val(),
+                // fName: $('#form_submission_fName').val(),
+                // lName: $('#form_submission_lName').val(),
+            }
+            console.log(data, "Data is here")
+            $.ajax({
+                type: 'POST',
+                url: 'https://test2109.herokuapp.com/register/register',
+                contentType: 'application/json',
+                dataType: 'json',
+                data: JSON.stringify(data),
+
+                success: function (data) {
+                    console.log(data);
+                    alert("Sucessfull")
+                },
+                error: function (err) {
+                    console.log("error: ", err);
+                }
+            });
+            //}
+
+        }
+    </script>
 </body>
 </html>
