nested route added

--- a/form/contact-form.html
+++ b/form/contact-form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,13 +12,14 @@
 
     <title>Travel Diary- Contact</title>
 </head>
+
 <body>
     <header>
         <!-- Top bar navigation items -->
         <nav class="navbar">
-            <a href="index.html">Trips</a>
-            <a href="about.html">About</a>
-            <a href="contact-form.html">Contact</a>
+            <a href="../index.html">Trips</a>
+            <a href="../about.html">About</a>
+            <a href="">Contact</a>
         </nav>
     </header>
     <main>
@@ -47,7 +49,7 @@
     </footer>
     <script type="text/javascript">
         function feedbackCallBack(e) {
-        e.preventDefault();
+            e.preventDefault();
             console.log('----------------')
 
             // if ($('#form_submission_name').val() == '') {
@@ -81,4 +83,5 @@
         }
     </script>
 </body>
+
 </html>
