--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <a href="index.html">Trips</a>
             <a href="about.html">About</a>
-            <a href="contact-form.html">Contact</a>
+            <a href="form/contact-form.html">Contact</a>
         </nav>
     </header>
     <main>
