--- a/form/contactUs/contact-form.html
+++ b/form/contactUs/contact-form.html
@@ -17,8 +17,8 @@
     <header>
         <!-- Top bar navigation items -->
         <nav class="navbar">
-            <a href="../index.html">Trips</a>
-            <a href="../about.html">About</a>
+            <a href="../../index.html">Trips</a>
+            <a href="../../about.html">About</a>
             <a href="">Contact</a>
         </nav>
     </header>
