--- a/form/contactUs/test/contact-form.html
+++ b/form/contactUs/test/contact-form.html
@@ -17,8 +17,8 @@
     <header>
         <!-- Top bar navigation items -->
         <nav class="navbar">
-            <a href="../../index.html">Trips</a>
-            <a href="../../about.html">About</a>
+            <a href="../../../index.html">Trips</a>
+            <a href="../../../about.html">About</a>
             <a href="">Contact</a>
         </nav>
     </header>
@@ -29,7 +29,7 @@
 
 
         <div class="form-body">
-            <form onsubmit="feedbackCallBack()">
+            <form id="contact-form">
                 <div>
                     <input type="text" name="name" id="name" placeholder="Full Name">
                 </div>
@@ -48,39 +48,41 @@
         <a href="contact-form.html">Contact</a>
     </footer>
     <script type="text/javascript">
-        function feedbackCallBack(e) {
-            e.preventDefault();
-            console.log('----------------')
+        $("#contact-form").on("submit",
+            function (e) {
+                e.preventDefault();
+                console.log('----------------')
 
-            // if ($('#form_submission_name').val() == '') {
-            //   alert("Please enter the Name");
+                // if ($('#form_submission_name').val() == '') {
+                //   alert("Please enter the Name");
 
-            // } else {
-            var data = {
-                name: $('#name').val(),
-                email: $('#email').val(),
-                // fName: $('#form_submission_fName').val(),
-                // lName: $('#form_submission_lName').val(),
-            }
-            console.log(data, "Data is here")
-            $.ajax({
-                type: 'POST',
-                url: 'https://test2109.herokuapp.com/register/register',
-                contentType: 'application/json',
-                dataType: 'json',
-                data: JSON.stringify(data),
-
-                success: function (data) {
-                    console.log(data);
-                    alert("Sucessfull")
-                },
-                error: function (err) {
-                    console.log("error: ", err);
+                // } else {
+                var data = {
+                    name: $('#name').val(),
+                    email: $('#email').val(),
+                    // fName: $('#form_submission_fName').val(),
+                    // lName: $('#form_submission_lName').val(),
                 }
-            });
-            //}
+                console.log(data, "Data is here")
+                $.ajax({
+                    type: 'POST',
+                    url: 'https://test2109.herokuapp.com/register/register',
+                    contentType: 'application/json',
+                    dataType: 'json',
+                    data: JSON.stringify(data),
 
-        }
+                    success: function (data) {
+                        console.log(data);
+                        alert("Sucessfull")
+                    },
+                    error: function (err) {
+                        console.log("error: ", err);
+                    }
+                });
+                //}
+
+            }
+        )
     </script>
 </body>
 
