--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                 </tr>
             </table>
         </div>
+        <script type="text/javascript" src="https://cdns.useinfluence.co/testimonial/iframeResizer.min.js"></script>
+    <iframe id="social-proof" src="https://testimonials.useinfluence.co/60f7e59afb2f610012dd678c/INF-3gbfcjjsd6vhvo" frameborder="0" scrolling="no" width="100%"></iframe>
+    <script type="text/javascript">iFrameResize({log: false, checkOrigin: false}, "#social-proof");</script>
+    
     </main>
     <footer>
         <a href="index.html">Trips</a>
